Remove duplicated logic with eap-job.sh